[package]
name = "netbox"
version = "0.1.0"
authors = ["Finn Behrens <me@kloenk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
semver = "0.9"

[dependencies.reqwest]
version = "0.10.0"
default-features = false
features = [ "rustls-tls", "gzip" ]
